crates/psychevo-cli/src/snapshots/consecutive_tool_rows_flat.snap
---
source: crates/psychevo-cli/src/tui/tests/fixtures.rs
assertion_line: 612
expression: combined
---
fixture=consecutive_tool_rows_flat
size=120x20

--- text ---
› Summarize several tool calls.

• Thinking
  └ I need to inspect files and run checks before answering.

• Explored crates/psychevo-cli/src/tui/render/transcript.rs
  └ read 240 lines
• Ran cargo test -p psychevo-cli tui::tests
  └ ok
• Changed crates/psychevo-cli/src/tui/render/transcript.rs
  └ write normal
• Ran cargo fmt
  └ ok

The tool evidence stays flat even when several tool rows arrive consecutively.

────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
› Ask pevo...

mock/model  high

--- styles ---
[dim]› [default]Summarize several tool calls.
[default]
[paper]• Thinking[default]
[dim]  └ I need to inspect files and run checks before answering.[default]
[default]
[green]• [default]Explored crates/psychevo-cli/src/tui/render/transcript.rs
[dim]  └ [default]read 240 lines
[green]• [default]Ran cargo test -p psychevo-cli tui::tests
[dim]  └ [default]ok
[green]• [default]Changed crates/psychevo-cli/src/tui/render/transcript.rs
[dim]  └ [default]write normal
[green]• [default]Ran cargo fmt
[dim]  └ [default]ok
[default]
[default]The tool evidence stays flat even when several tool rows arrive consecutively.
[default]
[default]────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[dim]›[default] [dim]Ask pevo...[default]
[default]
[default]mock/model  [magenta]high[default]
