crates/psychevo-cli/src/snapshots/debug_meta_with_usage_metadata.snap
---
source: crates/psychevo-cli/src/tui/tests/fixtures.rs
expression: combined
---
fixture=debug_meta_with_usage_metadata
size=120x24

--- text ---
› Summarize the TUI snapshot harness.

• Thinking
  └ Check layout boundaries, style roles, and expandable evidence.

• Explored crates/psychevo-cli/src/tui.rs                                                               ▸ 16 more lines
  └ 01: crates/psychevo-cli/src/tui.rs evidence row
    02: crates/psychevo-cli/src/tui.rs evidence row
    03: crates/psychevo-cli/src/tui.rs evidence row
    04: crates/psychevo-cli/src/tui.rs evidence row
    05: crates/psychevo-cli/src/tui.rs evidence row
    06: crates/psychevo-cli/src/tui.rs evidence row
    07: crates/psychevo-cli/src/tui.rs evidence row
    08: crates/psychevo-cli/src/tui.rs evidence row

The harness snapshots stable buffer text and style roles, then leaves real terminal screenshots as diagnostics.
▌ mock/mock-model high  2s  usage 120 input  metadata response resp_snapshot




────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
› Ask pevo...
mock/model  high  ~/work · main

--- styles ---
[dim]› [default]Summarize the TUI snapshot harness.
[default]
[green]• [default]Thinking
[dim]  └ Check layout boundaries, style roles, and expandable evidence.[default]
[default]
[green]• [default]Explored crates/psychevo-cli/src/tui.rs                                                               [dim]▸ 16 more lines[default]
[dim]  └ [default]01: crates/psychevo-cli/src/tui.rs evidence row
[dim]    [default]02: crates/psychevo-cli/src/tui.rs evidence row
[dim]    [default]03: crates/psychevo-cli/src/tui.rs evidence row
[dim]    [default]04: crates/psychevo-cli/src/tui.rs evidence row
[dim]    [default]05: crates/psychevo-cli/src/tui.rs evidence row
[dim]    [default]06: crates/psychevo-cli/src/tui.rs evidence row
[dim]    [default]07: crates/psychevo-cli/src/tui.rs evidence row
[dim]    [default]08: crates/psychevo-cli/src/tui.rs evidence row
[default]
[default]The harness snapshots stable buffer text and style roles, then leaves real terminal screenshots as diagnostics.
[dim]▌ mock/mock-model high  2s  usage 120 input  metadata response resp_snapshot[default]
[default]
[default]
[default]
[default]
[default]────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[dim]›[default] [dim]Ask pevo...[default]
[default]mock/model  [magenta]high[default]  [dim]~/work · main[default]
