crates/psychevo-cli/src/snapshots/expanded_long_tool_output.snap
---
source: crates/psychevo-cli/src/tui/tests/fixtures.rs
assertion_line: 667
expression: combined
---
fixture=expanded_long_tool_output
size=120x24

--- text ---
› Summarize the TUI snapshot harness.

• Thinking
  └ Check layout boundaries, style roles, and expandable evidence.

› Explored crates/psychevo-cli/src/tui.rs                                                                    ▾ collapse
  └ 01: crates/psychevo-cli/src/tui.rs evidence row
    02: crates/psychevo-cli/src/tui.rs evidence row
    03: crates/psychevo-cli/src/tui.rs evidence row
    04: crates/psychevo-cli/src/tui.rs evidence row
    05: crates/psychevo-cli/src/tui.rs evidence row
    06: crates/psychevo-cli/src/tui.rs evidence row
    07: crates/psychevo-cli/src/tui.rs evidence row
    08: crates/psychevo-cli/src/tui.rs evidence row
    09: crates/psychevo-cli/src/tui.rs evidence row
    10: crates/psychevo-cli/src/tui.rs evidence row
    11: crates/psychevo-cli/src/tui.rs evidence row
    12: crates/psychevo-cli/src/tui.rs evidence row
    13: crates/psychevo-cli/src/tui.rs evidence row
    14: crates/psychevo-cli/src/tui.rs evidence row
    15: crates/psychevo-cli/src/tui.rs evidence row
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
› Ask pevo...
mock/model  high  ~/work · main

--- styles ---
[dim]› [default]Summarize the TUI snapshot harness.
[default]
[paper]• Thinking[default]
[dim]  └ Check layout boundaries, style roles, and expandable evidence.[default]
[default]
[cyan]› [default]Explored crates/psychevo-cli/src/tui.rs                                                                    [dim]▾ collapse[default]
[dim]  └ [default]01: crates/psychevo-cli/src/tui.rs evidence row
[dim]    [default]02: crates/psychevo-cli/src/tui.rs evidence row
[dim]    [default]03: crates/psychevo-cli/src/tui.rs evidence row
[dim]    [default]04: crates/psychevo-cli/src/tui.rs evidence row
[dim]    [default]05: crates/psychevo-cli/src/tui.rs evidence row
[dim]    [default]06: crates/psychevo-cli/src/tui.rs evidence row
[dim]    [default]07: crates/psychevo-cli/src/tui.rs evidence row
[dim]    [default]08: crates/psychevo-cli/src/tui.rs evidence row
[dim]    [default]09: crates/psychevo-cli/src/tui.rs evidence row
[dim]    [default]10: crates/psychevo-cli/src/tui.rs evidence row
[dim]    [default]11: crates/psychevo-cli/src/tui.rs evidence row
[dim]    [default]12: crates/psychevo-cli/src/tui.rs evidence row
[dim]    [default]13: crates/psychevo-cli/src/tui.rs evidence row
[dim]    [default]14: crates/psychevo-cli/src/tui.rs evidence row
[dim]    [default]15: crates/psychevo-cli/src/tui.rs evidence row
[default]────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[dim]›[default] [dim]Ask pevo...[default]
[default]mock/model  [magenta]high[default]  [dim]~/work · main[default]
