crates/psychevo-cli/src/snapshots/failure_tool_error_turn_meta.snap
---
source: crates/psychevo-cli/src/tui/tests/fixtures.rs
expression: combined
---
fixture=failure_tool_error_turn_meta
size=120x24

--- text ---
› Run a command that fails.

• exec_command cargo test -p psychevo-cli
  └ exit_code=101
    compile error: fixture failure

The run failed before producing a clean validation result.
▌ mock/mock-model  1 failure













────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
› Ask pevo...
mock/model  high  ~/work · main

--- styles ---
[dim]› [default]Run a command that fails.
[default]
[red]• exec_command cargo test -p psychevo-cli[default]
[dim]  └ [red]exit_code=101[default]
[dim]    [red]compile error: fixture failure[default]
[default]
[default]The run failed before producing a clean validation result.
[dim]▌ mock/mock-model  1 failure[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[dim]›[default] [dim]Ask pevo...[default]
[default]mock/model  [magenta]high[default]  [dim]~/work · main[default]
