crates/psychevo-cli/src/snapshots/file_completion_popup.snap
---
source: crates/psychevo-cli/src/tui/tests/fixtures.rs
expression: combined
---
fixture=file_completion_popup
size=120x24

--- text ---















────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
│ files
│  dir   src
│> file  src/main.rs
│  file  crates/psychevo-cli/src/tui/mod.rs
│
› review @src

mock/model  high  ~/work · main

--- styles ---
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[default]│ files
[default]│[cyan]  [magenta]dir [default]  src
[default]│[cyan]> [magenta]file[cyan]  src/main.rs[default]
[default]│[cyan]  [magenta]file[default]  crates/psychevo-cli/src/tui/mod.rs
[default]│
[dim]›[default] review @src
[default]
[default]mock/model  [magenta]high[default]  [dim]~/work · main[default]
