crates/psychevo-cli/src/snapshots/history_pending_write_call.snap
---
source: crates/psychevo-cli/src/tui/tests/fixtures.rs
assertion_line: 667
expression: combined
---
fixture=history_pending_write_call
size=120x18

--- text ---
NYT is behind a paywall. Based on comments, I can still summarize the Meta article. Let me now write the report.

◦ Updating feeds/2026-05-10/hackernews-hot-06-42.md                                                                  2s












────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
› Ask pevo...
mock/model  high  ~/work

--- styles ---
[default]NYT is behind a paywall. Based on comments, I can still summarize the Meta article. Let me now write the report.
[default]
[cyan]◦ [default]Updating feeds/2026-05-10/hackernews-hot-06-42.md                                                                  [dim]2s[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[dim]›[default] [dim]Ask pevo...[default]
[default]mock/model  [magenta]high[default]  [dim]~/work[default]
