crates/psychevo-cli/src/snapshots/long_command_folded_output.snap
---
source: crates/psychevo-cli/src/tui/tests/fixtures.rs
assertion_line: 704
expression: combined
---
fixture=long_command_folded_output
size=120x18

--- text ---
› Fetch comments from sqlite.

• exec_command cd /home/kevin/Projects/feedgarden && sqlite3 feeds/.cache/hn.db "SELECT id || '|' || by… ▸ 6 more lines
  └ 48070001||user1||cached comment text
    48070002||user2||cached comment text
    ... 6 more lines
    48070009||user9||cached comment text
    48070010||user10||cached comment text
    48070011||user11||cached comment text
    48070012||user12||cached comment text





────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
› Ask pevo...
mock/model  high  ~/work · main

--- styles ---
[dim]› [default]Fetch comments from sqlite.
[default]
[green]• [default]exec_command cd /home/kevin/Projects/feedgarden && sqlite3 feeds/.cache/hn.db "SELECT id || '|' || by… [dim]▸ 6 more lines[default]
[dim]  └ [default]48070001||user1||cached comment text
[dim]    [default]48070002||user2||cached comment text
[dim]    [default]... 6 more lines
[dim]    [default]48070009||user9||cached comment text
[dim]    [default]48070010||user10||cached comment text
[dim]    [default]48070011||user11||cached comment text
[dim]    [default]48070012||user12||cached comment text
[default]
[default]
[default]
[default]
[default]
[default]────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[dim]›[default] [dim]Ask pevo...[default]
[default]mock/model  [magenta]high[default]  [dim]~/work · main[default]
