crates/psychevo-cli/src/snapshots/model_bottom_panel.snap
---
source: crates/psychevo-cli/src/tui/tests/fixtures.rs
assertion_line: 341
expression: combined
---
fixture=model_bottom_panel
size=120x24

--- text ---






────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────

  Select Model                                                                                                     esc
  Search
  Add provider  configure global OpenAI-compatible provider
  All providers  not fetched
  mock  not fetched
  › ● mock/mock-model  mock
  mock/other-model  mock  default high

  Enter select  Esc close  Type search






mock/mock-model  default

--- styles ---
[default]
[default]
[default]
[default]
[default]
[default]
[default]────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[default]
[default]  [dim]Select Model[default]                                                                                                     [dim]esc[default]
[default]  [dim]Search [default]
[default]  [cyan]Add provider[dim]  configure global OpenAI-compatible provider[default]
[default]  [cyan]All providers[dim]  not fetched[default]
[default]  [cyan]mock[dim]  not fetched[default]
[default]  [cyan]› ● mock/mock-model  mock[default]
[default]  mock/other-model  mock  default high
[default]
[default]  [dim]Enter select  Esc close  Type search[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]mock/mock-model  [magenta]default[default]
